Modifications to pagination in TaskController index method and code styling issue fixes
